--- a/index.html
+++ b/index.html
@@ -17,11 +17,10 @@
         $('#main_content').headsmart()
       })
     </script>
-    <title>Navy Blue by kem1sts</title>
+    <title>Navy Blue</title>
   </head>
 
   <body>
-    <a id="forkme_banner" href="https://github.com/kem1sts">View on GitHub</a>
     <div class="shell">
 
       <header>
@@ -54,7 +53,7 @@
       <footer>
         <span class="ribbon-outer">
           <span class="ribbon-inner">
-            <p>Projects by <a href="https://github.com/kem1sts">kem1sts</a> can be found on <a href="https://github.com/kem1sts">GitHub</a></p>
+            <p>Thank you for visiting the Navy Blue site!</p>
           </span>
           <span class="left-tail"></span>
           <span class="right-tail"></span>
